--- a/pages/home.html
+++ b/pages/home.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Wintercamp</title>
+    <link rel="icon" href="images/kép.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style/home.css">
 </head>
 <body>
-$END$
+<header>
+    <nav>
+        <a href="home.html">Home</a>
+        <a href="#">About</a>
+    </nav>
+</header>
+<div id="centered">
+    <br>
+    <a href="pong.html">
+        <button>Játék</button>
+    </a>
+</div>
 </body>
 </html>
